name:                rsync-streams
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            An Rsync protocol implementation.
description:         An Rsync protocol implementation.
category:            System
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple
homepage:            https://github.com/noteed/rsync-streams

source-repository head
  type: git
  location: git://github.com/noteed/rsync-streams.git

flag rsync-debug
  description: Add Rsync debug output that are visible client-side. TODO Confirm.
  default: False

executable rsync-mitm
  hs-source-dirs:      bin
  main-is:             rsync-mitm.hs
  build-depends:       attoparsec == 0.10.*,
                       base == 4.*,
                       bytestring == 0.9.*,
                       io-streams == 1.1.*,
                       process == 1.1.*
  ghc-options:         -Wall
